<resources>
    <string name="app_name">TestOnScrollView</string>
    <string name="achievement">Thành tựu</string>
    <string name="achievement_1">Thành tựu ngày tham gia</string>
    <string name="achievement_2">Thành tựu học phần đã học</string>
    <string name="achievement_3">Thành tựu thư mục đã tạo</string>
    <string name="achievement_1_title">Khám phá xem bạn đã tham gia bao lâu?</string>
    <string name="achievement_1_title_true">Thành tựu bạn đã đạt được</string>
    <string name="achievement_1_title_false">Thành tựu có thể đạt được</string>
    <string name="achievement_2_title">Bạn đã học được bao nhiêu học phần?</string>
    <string name="achievement_3_title">Bao nhiêu thư mục bạn đã tạo?</string>
    <string name="read_all">Xem tất cả</string>
    <string name="subject">Học phần</string>
    <string name="folder"> Thư mục </string>
    <string name="dialog_notification_header_title"> Hoạt động </string>
    <string name="item_subject_1">Tên học phần</string>
    <string name="item_subject_2">Từ vựng</string>
    <string name="item_subject_3">Mô tả</string>
    <string name="item_folder_1">Tên thư mục</string>
    <string name="item_folder_2">Học phần</string>
    <string name="item_folder_3">Mô tả</string>
    <string name="dialog_create_subject">Tạo học phần</string>
    <string name="dialog_create_folder">Tạo thư mục</string>
    <string name="game1_1">Thẻ ghi nhớ</string>
    <string name="game1_2">Ôn lại các từ vựng và định nghĩa</string>
    <string name="game2_1">Học</string>
    <string name="game2_2">Chọn các đáp án</string>
    <string name="game3_1">Kiểm tra</string>
    <string name="game3_2">Beta</string>
    <string name="game4_1">Ghép từ</string>
    <string name="game4_2">Nối từ với máy</string>
    <string name="subject_setting_1">Thêm vào thư mục </string>
    <string name="subject_setting_2">Chỉnh sửa </string>
    <string name="subject_setting_3">Chia sẻ </string>
    <string name="subject_setting_4">Xóa học phần </string>
    <string name="delete_dialog_1"> Bạn chắc chắc muốn xóa học phần này?</string>
    <string name="sort_1">Sắp xếp thuật ngữ</string>
    <string name="sort_2">Theo thứ tự mặc định</string>
    <string name="sort_3">Theo bảng chữ cái</string>
    <string name="game_1_result">Bạn có muốn tiếp tục với thử thách mới?</string>
    <string name="game_1_result2">Hay tiếp tục với học phần khác?</string>
    <string name="game_1_result_title">Bạn đã hoàn thành xuất sắc</string>
    <string name="game_1_result_wrong">Các từ bạn cần ôn lại</string>
    <string name="game_1_result_correct">Các từ bạn đã nắm vững</string>
    <string name="game_2_result_correct_3">Bạn đã chọn đúng. Thật tuyệt vời !!!</string>
    <string name="game_2_result_correct_7">Bạn đã lại chọn đúng. Quá xuất sắc !!!</string>
    <string name="game_2_result_correct_12">Bạn đã chọn đúng quá nhiều. Tuyệt hảo !!!</string>
    <string name="game_2_result_cp_1">Số câu bạn đã trả lời đúng </string>
    <string name="game_2_result_cp_2">Số câu hỏi dễ trả lời đúng</string>
    <string name="game_2_result_cp_3">Số câu hỏi trung bình trả lời đúng </string>
    <string name="game_2_result_cp_4">Số câu hỏi khó trả lời đúng </string>
    <string name="game_2_result_cp_5">Các câu bạn cần ôn lại </string>
    <string name="create_subject_1">Chủ đề, tên học phần</string>
    <string name="create_subject_2">TIÊU ĐỀ</string>
    <string name="create_subject_3">Hãy cho mô tả học phần của bạn?</string>
    <string name="create_subject_4">MÔ TẢ </string>
    <string name="game3_notification_0">ComeOn </string>
    <string name="game3_notification_1">Great </string>
    <string name="game3_notification_2">Excellent</string>
    <string name="game3_notification_3">Amazing</string>
    <string name="game3_notification_4">Only one step left!!!</string>
</resources>