<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:fontFamily="@font/ambebold"
            android:gravity="center|left"
            android:text="@string/sort_1"
            android:textSize="16sp"
            android:paddingLeft="40dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/filter1"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:id="@+id/tv2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:fontFamily="@font/ambebold"
                android:gravity="center|left"
                android:paddingLeft="40dp"
                android:text="@string/sort_2"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/img2"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.8" />

            <ImageView
                android:id="@+id/img2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:padding="15dp"
                android:src="@drawable/tick"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/tv2"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.2" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/filter2"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:id="@+id/tv3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:fontFamily="@font/ambebold"
                android:gravity="center|left"
                android:paddingLeft="40dp"
                android:text="@string/sort_3"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/img3"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.8" />

            <ImageView
                android:id="@+id/img3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:padding="15dp"
                android:src="@drawable/tick"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/tv3"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.2" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</layout>