<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activity.CreateSubject">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/c1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            app:layout_constraintBottom_toTopOf="@id/c2"
            app:layout_constraintHeight_percent="0.065"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/c1_1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:padding="7dp"
                android:src="@drawable/back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/c1_2"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.1" />

            <TextView
                android:id="@+id/c1_2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:fontFamily="@font/ambebold"
                android:gravity="center|left"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/c1_1"
                app:layout_constraintRight_toLeftOf="@id/c1_3"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.65" />

            <ImageView
                android:id="@+id/c1_3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:padding="7dp"
                android:src="@drawable/setting"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/c1_2"
                app:layout_constraintRight_toLeftOf="@id/c1_4"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.1" />

            <ImageView
                android:id="@+id/c1_4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:padding="14dp"
                android:src="@drawable/tick"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/c1_3"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.15" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <FrameLayout
            android:id="@+id/c2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/c1">

            <androidx.core.widget.NestedScrollView
                android:id="@+id/c3"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/header1"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:hint="@string/create_subject_1"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginTop="3dp"
                        android:text="@string/create_subject_2"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/header2"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:hint="@string/create_subject_3"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginTop="3dp"
                        android:text="@string/create_subject_4"
                        android:textStyle="bold" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/createWordRv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="50dp"/>

                </LinearLayout>

            </androidx.core.widget.NestedScrollView>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/new_word"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:layout_margin="20dp"
                android:src="@drawable/create_add"
                app:backgroundTint="@color/quizz"
                app:tint="@color/white" />
        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>